2001-02-08  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-style-info.scm: Fix bug.

	* src/scm/gnc-numeric.scm: Add more functions on gnc-monetary.

	* src/scm/html-utilities.scm: Add balance sign reversal
	conditioned on gnc:account-reverse-balance? for the account
	table. Add function to print exchange rates.

	* src/scm/report-utilities.scm: Modify commodity-collector to
	enable more sign reversals and usage of gnc-monetary. Add option
	creation functions common to several reports.

	* src/scm/report/account-summary.scm: Removed function now in
	report-utilities.scm. Added variables for option names.

	* src/scm/report/pnl.scm: New Profit And Loss report, based on
	account-summary report.

2001-02-08  James LewisMoss  <dres@phoenixdsl.com>

	* src/engine/sixtp.c (sixtp_parse_file): Only set parse_result if
	it points somewhere.

	* src/engine/sixtp-to-dom-parser.c (dom_chars_handler): fix
	character adding.

2001-02-07  James LewisMoss  <dres@phoenixdsl.com>

	* make-gnucash-patch.in: Add a file ending that is ignored.

	* src/doc/xml/types.dtd: Change currency-type -> commodity-type.
	Add defs for cmd:space and cmd:id.

	* src/doc/xml/io-gncxml-version1.dtd: Change currency-type ->
	commodity-type.

	* src/doc/xml/account-v2.dtd: Change currency-type ->
	commodity-type.

2001-02-06  James LewisMoss  <dres@phoenixdsl.com>

	* src/engine/sixtp.c: Use frame creator.
	Move sixtp_handle_catastrophe to here. Add functions
	sixtp_context_new, sixtp_context_destroy.  And change and move
	sixtp_parse_file and sixtp_parse_buffer here from io-gncxml-r.c
	Add concept of a parsing context to hold data.

	* src/engine/sixtp-stack.h: Add creator.  Add headers.

	* src/engine/sixtp-stack.c: Add creator.

	* src/engine/sixtp-parsers.h: add needed headers.
	Add func from sixtp-to-dom-parser.c

	* src/engine/io-gncxml.h: Fix name.

	* src/engine/io-gncxml-w.c: Fix name.

	* src/engine/io-gncxml-r.c: Fix name.  Create stack frame creator
	function and use here.
